--- a/FRONT/templates/login.html
+++ b/FRONT/templates/login.html
@@ -1,4 +1,8 @@
-{% extends "base.html" %}
+{% if es_admin %}
+    {% extends "admin-base.html" %}
+{% else %}
+    {% extends "base.html" %}
+{% endif %}
 
 {% block content %}
 <main class="login-main">
