--- a/FRONT/templates/pago.html
+++ b/FRONT/templates/pago.html
@@ -8,24 +8,20 @@
 
 <div class="container">
     <h2>Pago Seguro</h2>
-    <form id="paymentForm">
+    <form method="POST" action="/pago" id="paymentForm">
         <div class="input-group">
-            <label for="cardNumber">Número de Tarjeta</label>
-            <input type="text" id="cardNumber" name="cardNumber" required>
+            <label for="nombre">Nombre de Usuario</label>
+            <input type="text" id="nombre" name="nombre" required>
         </div>
         <div class="input-group">
-            <label for="cardName">Nombre en la Tarjeta</label>
-            <input type="text" id="cardName" name="cardName"  required>
+            <label for="id_evento">ID del Evento</label>
+            <input type="text" id="id_evento" name="id_evento" required>
         </div>
         <div class="input-group">
-            <label for="expiryDate">Fecha de Vencimiento</label>
-            <input type="text"  required>
+            <label for="cant_tickets">Cantidad Tickets</label>
+            <input type="text" id="cant_tickets" name="cant_tickets" required>
         </div>
-        <div class="input-group">
-            <label for="cvv">CVV</label>
-            <input type="text" id="cvv" name="cvv" required>
-        </div>
-        <button type="button" class="boton-reservar">Pagar Ahora</button>
+        <button type="submit" class="boton-reservar">Pagar Ahora</button>
     </form>
 </div>
 
