--- a/FRONT/static/css/futbol.css
+++ b/FRONT/static/css/futbol.css
@@ -1,68 +1,118 @@
-main{
-    background-image: url("/static/img/fondofutbol.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    margin: auto;
-}
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
-.contenedor-eventos {
-    display: flex;
-    flex-direction: column; 
-    gap: 20px; 
-}
-
-.evento {
-    border: 2px solid #ccc; 
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-}
-
-.contenido-evento {
-    display: flex;
-    gap: 20px;
-}
-
-.parte-izquierda {
-    flex: 1; 
-}
-
-.parte-derecha {
-    flex: 1; 
-}
-
-.mapa {
-    width: 100%; 
-    height: auto;
-}
-
-#enlace {
-    display: inline-block;
-    margin-top: 10px;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
+* {
+    margin: 0;
+    box-sizing: border-box;
     text-decoration: none;
-    border-radius: 5px;
 }
 
-#enlace:hover {
-    background-color: #0056b3;
+body {
+    font-family: "Oswald", sans-serif;
+    background-image:linear-gradient(
+        0deg,
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    ),url("/static/img/fondofutbol.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    color: white;
+    text-align: center;
+}
+
+
+.contenedor{
+    max-width: 1400px;
+    margin: auto;
+    padding: 60px 0px;
+    text-align: center;
+}
+
+h1{
+    font-size: 50px;
+    margin-bottom: 20px;
 }
 
 h2{
-    font-family: 'Monospace';
-    color: white;
+    font-size: 27px;
+    color:white;
 }
 
-p{
-    font-family: 'Monospace';
-    font-size: large;
+p {
+    font-size: 17px;
+    max-width: 400px;
+    margin: auto;
+}
+
+#texto-inicial {
+    font-size: 21px;
+}
+
+button {
+    margin:13px;
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 8px 16px;
+    border-radius: 15px;
+    border: 1px solid rgb(114, 114, 114);
     color: white;
-    text-shadow:
-       -1px -1px 0 black,
-       -1px 1px 0 black,
-       1px 1px 0 black,
-       1px -1px 0 black,
-    
+    background-color: blueviolet;
+    cursor:pointer;
+}
+
+button:hover {
+    background-color: #6e32a7;
+}
+
+#boton_mas_info {
+    margin:13px;
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 8px 16px;
+    border-radius: 15px;
+    border: 1px solid rgb(114, 114, 114);
+    color: white;
+    background-color: blueviolet;
+    cursor:pointer;
+}
+
+.eventos{
+    background-position: center center;
+    background-size: cover;
+    padding: 30px 50px;
+    border-radius: 15px;
+    margin:12px;
+    background-image:linear-gradient(
+        0deg,
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5))
+        ,url(/static/img/eSports/foto-counter.jpg)
+}
+
+.eventos p{
+    display:none;
+}
+
+
+@media (min-width:720px) {
+
+.pagina {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+#texto-inicial {
+    font-size: 23px;
+    margin-bottom: 40px;
+}
+
+.eventos p {
+    display: block;
+}
+
+.eventos {
+    padding: 20px;
+}
 }
