--- a/FRONT/templates/futbol.html
+++ b/FRONT/templates/futbol.html
@@ -6,16 +6,16 @@
 
 {% block content %}
 
-<link rel="stylesheet" href="{{ url_for('static', filename='/css/eSports.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='/css/futbol.css') }}">
 
 <section class = "seccion">
     <div class = "contenedor">
-        <h1>Eventos {{nombre_categoria}}</h1>
+        <h1>Eventos de {{nombre_categoria}}</h1>
         <p id = "texto-inicial">{{descripcion_categoria}}</p>
         <div class = "pagina">
             {%for evento in eventos %}
                 <div class = "eventos">
-                    <h2>{{evento.nombre}}</h2>
+                    <h2>{{evento.nombre_evento}}</h2>
                     <p>{{evento.descripcion}}</p>
                     <a id="boton_mas_info" href="{{url_for('musica')}}">Más Información</a>
                 </div>
