--- a/FRONT/templates/eSports.html
+++ b/FRONT/templates/eSports.html
@@ -10,53 +10,18 @@
 
 <section class = "seccion">
     <div class = "contenedor">
-        <h1>Eventos eSports</h1>
-        <p id = "texto-inicial">Reserva tu entrada para los mejores eventos del mundo del gaming.
-            Disfruta viendo a tus jugadores favoritos jugar o inscribete en
-            un torneo para jugar con amigos y demostrar tu nivel.</p>
+        <h1>Eventos de {{nombre_categoria}}</h1>
+        <p id = "texto-inicial">{{descripcion_categoria}}</p>
         <div class = "pagina">
-            <div class = "eventos">
-                <h2>Counter con amigos</h2>
-                <p>Reúne a tus amigos y participa en la vigésima novena edición de UniverseCSGO,
-                    uno de los torneos de Counter-Strike más emocionantes.
-                    Vive la adrenalina de competir en equipo y demuestra quién domina en el campo de batalla.</p>
-                <button href="#">Reserva aqui!</button>
-            </div>
-            <div class = "eventos">
-                <h2>Worlds 2024</h2>
-                <p>Sumérgete en el campeonato mundial de League of Legends,
-                    donde los mejores equipos del mundo luchan por la gloria.
-                    No te pierdas las jugadas más impresionantes y los momentos
-                    inolvidables que solo Worlds puede ofrecer.</p>
-                <button href="#">Reserva aqui!</button>
-            </div>
-            <div class = "eventos">
-                <h2>Valorant champions</h2>
-                <p>Asiste al campeonato de Valorant y presencia el enfrentamiento entre
-                    los jugadores más talentosos de la escena competitiva. Emoción,
-                    precisión y trabajo en equipo se unen en este evento épico.</p>
-                <button href="#">Reserva aqui!</button>
-            </div>
-            <div class = "eventos">
-                <h2>Torneo Fifa</h2>
-                <p>Demuestra tus habilidades futbolísticas en el Torneo FIFA Ultimate.
-                    Compite contra otros fanáticos del fútbol y lleva a tu equipo a la
-                    victoria en el videojuego de fútbol más popular del mundo.</p>
-                <button href="#">Reserva aqui!</button>
-            </div>
+            {%for evento in eventos %}
+                <div class = "eventos">
+                    <h2>{{evento.nombre_evento}}</h2>
+                    <p>{{evento.descripcion}}</p>
+                    <a id="boton_mas_info" href="{{url_for('Descripcion_evento', id_evento=evento.id_evento)}}">Más Información</a>
+                </div>
+            {% endfor %}           
         </div>
     </div>
-    <h1>Eventos {% if categoria %} de {{ categoria }}{% else %} disponibles{% endif %}</h1>
-    <ul>
-        {% for event in events %}
-            <li>
-                <h3>{{ event.nombre_evento }}</h3>
-                <p>{{ event.descripcion }}</p>
-                <p><strong>Localización:</strong> {{ event.localizacion }}</p>
-                <p><strong>Precio:</strong> {{ event.precio_entrada }}</p>
-            </li>
-        {% endfor %}
-    </ul>
 </section>
 
 {% endblock %}
