--- a/FRONT/templates/admin-base.html
+++ b/FRONT/templates/admin-base.html
@@ -11,7 +11,7 @@
 
     <header>
         <div class="contenedor-header">
-            <img src="/static/img/logo-br.png" alt="Logo" class="logo">
+            <a href="{{ url_for('index') }}"> <img src="/static/img/logo-br.png" alt="Logo" class="logo"> </a>
             <input type="text" placeholder="Buscar" class="barra-busqueda">
             <a class="boton-reservar" href="{{url_for('reserva')}}">Consulta tu reserva</a>
             <a class="boton-modificar" href=""> Modificar eventos </a> <!-- TODO: aqui va el link a Modificar eventos -->
