--- a/FRONT/templates/base.html
+++ b/FRONT/templates/base.html
@@ -11,7 +11,7 @@
 
     <header>
         <div class="contenedor-header">
-            <img src="{{ url_for('static', filename='img/logo-br.png') }}" alt="Logo" class="logo">
+            <a href="{{ url_for('index') }}"> <img src="/static/img/logo-br.png" alt="Logo" class="logo"> </a>
             <input type="text" placeholder="Buscar" class="barra-busqueda">
             <a class="boton-reservar" href="{{url_for('reserva')}}">Consulta tu reserva</a>
             <a class="boton-reservar" href="{{url_for('login')}}">Login</a>
