--- a/FRONT/static/css/styles.css
+++ b/FRONT/static/css/styles.css
@@ -35,7 +35,12 @@ header {
 }
 
 .logo {
-    width: 80px; 
+    width: 80px;
+    transition: transform 0.3s ease;
+}
+
+.logo:hover {
+    transform: scale(1.05);
 }
 
 .barra-busqueda {
