--- a/FRONT/static/css/conciertos.css
+++ b/FRONT/static/css/conciertos.css
@@ -4,8 +4,8 @@ main {
     font-family: "Oswald", sans-serif;
     background-image: linear-gradient(
         0deg,
-        rgba(0, 0, 0, 0.7), /* Ajusta este valor para cambiar la opacidad */
-        rgba(0, 0, 0, 0.7)  /* Ajusta este valor para cambiar la opacidad */
+        rgba(0, 0, 0, 0.7),
+        rgba(0, 0, 0, 0.7)
     ), url("/static/img/musica/fondo-concierto.jpeg");
     background-repeat: no-repeat;
     background-position: center center;
