--- a/FRONT/static/css/cultura_jp.css
+++ b/FRONT/static/css/cultura_jp.css
@@ -1,260 +1,109 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    }
-    
-    body {
-    font-family: Arial, sans-serif;
-    background-color: #2B0C4D;
-    background-image: url("/static/img/jp/fondo_sakura.jpg"); 
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+
+main {
+    font-family: "Oswald", sans-serif;
+    background-image: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 0.7),
+        rgba(0, 0, 0, 0.7)
+    ), url("/static/img/jp/fondo-cultura.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
     background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-    color: #E0C9F5;
-    }
-    
-    .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background-color: #6C1A91;
-    height: 150px;
-    }
-    
-    .header .logo img {
-    height: 140px;
-    width: auto;
-    }
-    
-    .search-bar input {
-    padding: 15px;
-    border-radius: 20px;
-    border: none;
-    width: 500px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-    font-size: 16px;
-    }
-    
-    .reserve-button {
-    background-color: transparent;
-    border: none;
-    padding: 0;
-    cursor: pointer;
-    }
-    
-    .reserve-button img {
-    height: 310px;
-    width: auto;
-    }
-    
-    .main-content {
-    display: flex;
+    color: white;
+    text-align: center;
+}
+
+
+.contenedor{
+    /* border: 2px solid green; */
+    display: grid;
     justify-content: center;
-    align-items: stretch;
-    gap: 20px;
-    padding: 40px;
-    }
-    
-    .event-info {
-    background-color: #3A1A6E;
-    border-radius: 10px;
-    padding: 20px;
-    width: 50%;
-    max-width: 800px;
-    margin-bottom: 20px;
-    display: flex;
-    flex-direction: column;
-    }
-    
-    .event-info h1 {
-    font-size: 24px;
-    margin-bottom: 12px;
-    }
-    
-    .event-info p {
-    font-size: 16px;
-    margin-bottom: 15px;
-    }
-
-    .event-media {
-    background-color: #3A1A6E;
-    border-radius: 10px;
-    padding: 20px;
-    width: 50%;
-    max-width: 800px;
-    margin-top: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    }
-    
-    .event-media img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    }
-    
-    .ticket-selection {
-    background-color: #3A1A6E;
-    border-radius: 10px;
-    padding: 20px;
-    width: 100%;
-    max-width: 800px;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    }
-    
-    .ticket-selection h2 {
-    font-size: 18px;
-    }
-    
-    .ticket-selection select {
-    width: 100%;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 5px;
-    background-color: #8C4CAD;
-    color: #FFFFFF;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s ease, box-shadow 0.3s ease;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    }
-    
-    .ticket-selection select:hover {
-    background-color: #733A9E;
-    box-shadow: 0 4px 12px rgba(115, 58, 158, 0.5);
-    }
-    
-    .ticket-selection select:focus {
-    outline: none;
-    background-color: #733A9E;
-    box-shadow: 0 4px 12px rgba(115, 58, 158, 0.7);
-    }
-    
-    .ticket-selection select::-ms-expand {
-    display: none;
-    }
-    
-    .ticket-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-bottom: 20px;
-    }
-    
-    .ticket-table th {
-    background-color: #4A247F;
-    color: #E0C9F5;
-    padding: 10px;
-    }
-    
-    .ticket-table td {
-    padding: 10px;
-    border-bottom: 1px solid #714C9E;
-    text-align: left;
-    }
-    
-    .ticket-table tr:hover {
-    background-color: #5D2E8C;
-    cursor: pointer;
-    color: #FFF;
-    }
-    
-    .select-btn {
-    width: 100%;
-    background-color: #8C4CAD;
-    color: #FFFFFF;
-    padding: 12px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: bold;
-    transition: background-color 0.3s ease, box-shadow 0.3s ease;
-    }
-    
-    .select-btn:hover {
-    background-color: #733A9E;
-    box-shadow: 0 0 10px rgba(115, 58, 158, 0.5);
-    }
-    
-    .select-btn:active {
-    background-color: #4A247F;
-    }
-    
-    .event-map {
-    width: 80%;
-    margin: 20px auto;
-    text-align: center;
-    }
-    
-    .event-map iframe {
-    width: 100%;
-    height: 400px;
-    border-radius: 10px;
-    border: none;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    }
-    
-    @media (max-width: 768px) {
-    .main-content {
-    flex-direction: column;
-    }
-    
-    .event-media {
-    margin-bottom: 15px;
-    }
-    
-    .event-map iframe {
-    height: 300px;
-    }
-    }
-
-
-    
-    .footer .social-media {
-    display: flex;
-    justify-content: flex-start;
     align-items: center;
-    margin-left: 15%;
-    margin-right: 15%;
-    }
-    
-    .footer .social-media a img {
-    width: 60px;
-    margin: 0 10px;
-    }
-    
-    .footer .creators {
-    text-align: center;
-    width: 50%;
-    color: #E0C9F5;
-    }
-    
-    .footer .creators ul {
-    list-style-type: none;
-    padding-left: 0;
-    }
-    
-    .footer .creators li {
-    margin: 5px 0;
-    }
-    
-    @media (max-width: 768px) {
-    .footer {
-    flex-direction: column;
-    text-align: center;
-    }
-    
-    .footer .social-media {
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-bottom: 10px;
-    }
-    
-    .footer .creators {
-    width: 100%;
-    }
-    }
+    grid-template-columns: 80%;
+    max-width: 50%;
+}
+
+#texto-inicial {
+    font-size: 21px;
+}
+
+h1{
+    font-size: 50px;
+    margin-bottom: 20px;
+}
+
+h2{
+    font-size: 27px;
+    color:white;
+}
+
+p {
+    font-size: 17px;
+    max-width: 400px;
+    margin: auto;
+}
+
+#boton_mas_info {
+    padding: 10px; 
+    background-color: #e74c3c;
+    border: 2px solid #000000;
+    color: #fff;
+    font-size: 15px;
+    border-radius: 10px;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+button {
+    margin:13px;
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 8px 16px;
+    border-radius: 15px;
+    border: 1px solid rgb(114, 114, 114);
+    color: white;
+    background-color: blueviolet;
+    cursor:pointer;
+}
+
+button:hover {
+    background-color: #6e32a7;
+}
+
+.eventos{
+    background-position: center center;
+    background-size: cover;
+    padding: 30px 50px;
+    border-radius: 15px;
+    margin:12px;
+}
+
+.eventos{
+    background-image: url("/static/img/musica/imagen-eventos.avif");
+}
+
+#texto-inicial {
+    font-size: 23px;
+    margin-bottom: 40px;
+}
+
+.eventos {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto auto;
+    padding: 20px;
+    margin: 30px;
+    row-gap: 15px;
+}
+
+#boton_mas_info {
+    padding: 10px; 
+    background-color: #e74c3c;
+    border: 2px solid #000000;
+    color: #fff;
+    font-size: 15px;
+    border-radius: 10px;
+    text-decoration: none;
+    cursor: pointer;
+}
