--- a/FRONT/static/css/eSports.css
+++ b/FRONT/static/css/eSports.css
@@ -1,18 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
-* {
-    margin: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-}
-
-body {
+main {
     font-family: "Oswald", sans-serif;
-    background-image:linear-gradient(
+    background-image: linear-gradient(
         0deg,
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5)
-    ),url("/static/img/eSports/background_eSports.jpg");
+        rgba(0, 0, 0, 0.7),
+        rgba(0, 0, 0, 0.7)
+    ), url("/static/img/eSports/background_eSports.jpg");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -22,10 +16,16 @@ body {
 
 
 .contenedor{
-    max-width: 1400px;
-    margin: auto;
-    padding: 60px 0px;
-    text-align: center;
+    /* border: 2px solid green; */
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: 80%;
+    max-width: 50%;
+}
+
+#texto-inicial {
+    font-size: 21px;
 }
 
 h1{
@@ -44,8 +44,15 @@ p {
     margin: auto;
 }
 
-#texto-inicial {
-    font-size: 21px;
+#boton_mas_info {
+    padding: 10px; 
+    background-color: #e74c3c;
+    border: 2px solid #000000;
+    color: #fff;
+    font-size: 15px;
+    border-radius: 10px;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 button {
@@ -64,7 +71,6 @@ button:hover {
     background-color: #6e32a7;
 }
 
-
 .eventos{
     background-position: center center;
     background-size: cover;
@@ -73,49 +79,8 @@ button:hover {
     margin:12px;
 }
 
-.eventos p{
-    display:none;
-}
-
-.eventos:first-child{
-    background-image:linear-gradient(
-        0deg,
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5))
-        ,url(/static/img/eSports/foto-counter.jpg);
-}
-
-.eventos:nth-child(2){
-    background-image:linear-gradient(
-        0deg,
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5))
-        ,url(/static/img/eSports/worlds-lol.jpg);
-}
-
-.eventos:nth-child(3){
-    background-image:linear-gradient(
-        0deg,
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5))
-        ,url(/static/img/eSports/eSports-valorant.jpg);
-}
-
-.eventos:nth-child(4){
-    background-image:linear-gradient(
-        0deg,
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5))
-        ,url(/static/img/eSports/eSports-fifa.jpg);
-}
-
-@media (min-width:720px) {
-
-.pagina {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
+.eventos{
+    background-image: url("/static/img/musica/imagen-eventos.avif");
 }
 
 #texto-inicial {
@@ -123,11 +88,22 @@ button:hover {
     margin-bottom: 40px;
 }
 
-.eventos p {
-    display: block;
+.eventos {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto auto;
+    padding: 20px;
+    margin: 30px;
+    row-gap: 15px;
 }
 
-.eventos {
-    padding: 20px;
-}
+#boton_mas_info {
+    padding: 10px; 
+    background-color: #e74c3c;
+    border: 2px solid #000000;
+    color: #fff;
+    font-size: 15px;
+    border-radius: 10px;
+    text-decoration: none;
+    cursor: pointer;
 }
