--- a/FRONT/templates/index.html
+++ b/FRONT/templates/index.html
@@ -1,5 +1,7 @@
 {% if es_admin %}
     {% extends "admin-base.html" %}
+{% elif sesion_iniciada %}
+    {% extends "usuarios-base.html" %}
 {% else %}
     {% extends "base.html" %}
 {% endif %}
@@ -20,7 +22,7 @@
 <h2 id="texto">Nuestras recomendaciones</h2>
 <div id="recomendaciones">
     {%for evento in eventos %}
-     <div class="recom">
+    <div class="recom">
         <div class = "eventos">
             <h2>{{evento.nombre_evento}}</h2>
             <p>{{evento.descripcion}}</p>
