--- a/FRONT/templates/usuarios-base.html
+++ b/FRONT/templates/usuarios-base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Universe</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/admin-styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/users-styles.css') }}">
     <link rel="icon" href="/static/img/logo-br.png" type="image/x-icon">
 </head>
 <body>
@@ -14,7 +14,8 @@
             <a href="{{ url_for('index') }}"> <img src="/static/img/logo-br.png" alt="Logo" class="logo"> </a>
             <input type="text" placeholder="Buscar" class="barra-busqueda">
             <a class="boton-reservar" href="{{url_for('reserva')}}">Consulta tu reserva</a>
-            <img src="/static/img/icon-user.jpg" alt="admin"class="icono_admin"></a>
+            <a class="boton-cerrar-sesion" href="{{ url_for('logout') }}">Cerrar sesión</a>
+            <img src="/static/img/icon-user.jpg" alt="admin"class="icono_user"></a>
         </div>
     </header>
     <main>
