--- a/FRONT/templates/pago.html
+++ b/FRONT/templates/pago.html
@@ -23,6 +23,22 @@
             <label for="cant_tickets">Cantidad Tickets</label>
             <input type="text" id="cant_tickets" name="cant_tickets" required>
         </div>
+        <div class="input-group">
+            <label for="cardNumber">Número de Tarjeta</label>
+            <input type="text" id="cardNumber" name="cardNumber" required>
+        </div>
+        <div class="input-group">
+            <label for="cardName">Nombre en la Tarjeta</label>
+            <input type="text" id="cardName" name="cardName" required>
+        </div>
+        <div class="input-group">
+            <label for="expiryDate">Fecha de Vencimiento</label>
+            <input type="text" id="expiryDate" name="expiryDate" required>
+        </div>
+        <div class="input-group">
+            <label for="cvv">CVV</label>
+            <input type="text" id="cvv" name="cvv" required>
+        </div>
         <button type="submit" class="boton-reservar">Pagar Ahora</button>
     </form>
 </div>
