--- a/FRONT/static/css/home.css
+++ b/FRONT/static/css/home.css
@@ -5,8 +5,8 @@ main{
     background-repeat: no-repeat;
     padding: 100px;
 }
-#categorias {
 
+#categorias {
     /* border: 2px solid green; */
     display: flex;
     justify-content: center;
@@ -60,28 +60,18 @@ h2 {
     margin-left: 40px;
 
 }
+
 #recomendaciones {
     display: grid;
     /* border: 2px solid green; */
-    /* background-color: #220752; */
-    width: auto;
-    height: auto;
-    padding: 20px;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin: 20px auto;
+    width: 80%;
+    padding: 5px;
+    box-sizing: border-box;
     justify-content: center;
-}
-
-.recom {
-    display: flex;
-    width: 100%;
-    height: auto;
-    margin-top: 20px;
-
-}
-
-.recomendacion {
-    width: 25%;
-    margin-left: 5px;
-    margin-right: 5px;
+    align-items: center;
 }
 
 .img_evento {
@@ -100,18 +90,7 @@ h2 {
     cursor: pointer;
 }
 
-.eventos{
-    background-position: center center;
-    background-size: cover;
-    padding: 30px 50px;
-    border-radius: 15px;
-    margin:12px;
-}
-
 .eventos {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto auto auto;
     padding: 20px;
     margin: 30px;
     row-gap: 15px;
